swagger 서버필터 및 보안스키마 추가
